--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A template for HTML and CSS",
   "main": "index.html",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "serve"
   },
@@ -17,6 +17,7 @@
     "serve": "11.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
